--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -29,3 +29,18 @@
   background-color: #dadada;
   cursor: default;
 }
+
+.borders li {
+  font-size: 20px;
+}
+
+table {
+  font-size: 20px;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: 3px 10px;
+  border: 1px solid #dadada;
+}
